[package]
name = "ereea"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10"
log = "0.4"
noise = "0.8"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }  # Pour la serialization éventuelle
crossbeam = "0.8"  # Ou std::sync, std::thread, selon vos besoins de concurrence
ratatui = "0.26.1"
crossterm = "0.27"  # Required for terminal manipulation with ratatui